# bibliotheque-francaise-llm

./: .gitignore  README.md
.claude/worktrees/compassionate-johnson-f75c8a/: MODE_HISTOIRE.md  README.md
.claude/worktrees/compassionate-johnson-f75c8a/conteur/: .env.example  DECISIONS.md  INDEX.md  KNOWLEDGE_BASE.md  STATE.md
.claude/worktrees/compassionate-johnson-f75c8a/docs/: audit-sources.md
annotations/: schema-theatre.md
annotations/oeuvres/: book:ile-au-tresor.json  moliere-misanthrope.json  moliere-tartuffe.json  racine-phedre.json
conteur/: DECISIONS.md  INDEX.md  KNOWLEDGE_BASE.md  README.md  STATE.md  pyproject.toml  requirements.txt  run.sh
conteur/data/books/: ile-au-tresor.json  lancelot-charrette.json  perceval-conte-du-graal.json  tristan-et-iseut.json  voyages-de-gulliver.json  yvain-chevalier-au-lion.json
conteur/deploy/: README.md  conteur-bucephale-sync.service  conteur-bucephale-sync.timer  conteur.env.example  conteur.service  nginx-conteur.eiffelai.io.bootstrap.conf  nginx-conteur.eiffelai.io.conf  rollback.md  smoke-test.md  sync-bucephale.sh
conteur/docs/: DECOUPLAGE_TTS_LONGTERME.md
conteur/scripts/: audit_books.py
conteur/src/cedar_conteur/: adapter.py  annotations.py  conteur.py  dsp.py  library.py  robot.py
conteur/standalone/: server.py
conteur/standalone/static/: app.js  index.html  soundtouch-worklet.js  style.css
conteur/tools/: analyze_trace.py
docs/: audit-sources.md
index/: STRUCTURE.md
memory/: project_timeline.md
sources/: DRACOR.md
sources/dracor-cache/: racine-andromaque.json  racine-phedre.json
(+10 files in other folders)
